--- a/imageloader/build.gradle
+++ b/imageloader/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:24.0.0'
     compile files('libs/volley.jar')
+    compile project(':queue')
 }
 
 install {
