Using AndroidManifest.xml files instead link

--- a/imageloader/AndroidManifest.xml
+++ b/imageloader/AndroidManifest.xml
@@ -1,1 +1,11 @@
-/home/nick/android/code/cm13/frameworks/opt/imageloader/imageloader/src/main/AndroidManifest.xml
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="dev.nick.imageloader">
+
+    <application
+        android:allowBackup="true"
+        android:label="@string/app_name"
+        android:supportsRtl="true">
+
+    </application>
+
+</manifest>
