--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,2 @@
-include ':app', ':imageloader'
+include ':app', ':android.opt.imageloader'
+project(':android.opt.imageloader').projectDir = new File('core')
