Add test for liadImage API

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,6 +41,10 @@
             android:name=".NetworkImageTest"
             android:label="NetworkImageTest" />
 
+        <activity
+            android:name=".LoadImageTest"
+            android:label="LoadImageTest" />
+
     </application>
 
 </manifest>
