--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,6 +45,10 @@
             android:name=".LoadImageTest"
             android:label="LoadImageTest" />
 
+        <activity
+            android:name=".Usage"
+            android:label="Usage" />
+
     </application>
 
 </manifest>
