--- a/core/build.gradle
+++ b/core/build.gradle
@@ -35,6 +35,7 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:24.1.0'
     compile 'com.google.guava:guava:19.0'
+    compile "org.projectlombok:lombok:1.16.10"
 }
 
 install {
