--- a/core/build.gradle
+++ b/core/build.gradle
@@ -6,7 +6,7 @@ def siteUrl = 'http://nickandroid.github.io/ImageLoader_Android/'
 def gitUrl = 'https://github.com/NickAndroid/ImageLoader_Android.git'
 
 group = "dev.nick"
-version = "1.3"
+version = "1.4"
 
 android {
     compileSdkVersion 24
@@ -30,12 +30,14 @@ android {
     }
 }
 
+repositories {
+    maven { url "https://jitpack.io" }
+}
+
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:24.1.0'
-    compile 'com.google.guava:guava:19.0'
-    compile "org.projectlombok:lombok:1.16.10"
 }
 
 install {
