--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -57,6 +57,10 @@
             android:name=".Usage"
             android:label="Usage" />
 
+        <activity
+            android:name=".ScrollStateTest"
+            android:label="ScrollStateTest" />
+
     </application>
 
 </manifest>
