Experence update: Apply loading img if user has defined

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -61,6 +61,9 @@
             android:name=".ScrollStateTest"
             android:label="ScrollStateTest" />
 
+        <activity
+            android:name=".CustomAnimationTest"
+            android:label="CustomAnimationTest" />
     </application>
 
 </manifest>
