--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,5 +33,6 @@ dependencies {
     compile 'com.android.support:palette-v7:24.1.0'
     compile 'com.android.support:recyclerview-v7:24.1.0'
     compile 'com.nick.scalpel:scalpel:1.0.6'
+    compile 'com.github.Cutta:GifView:1.1'
     compile project(':imageloader')
 }
