--- a/core/build.gradle
+++ b/core/build.gradle
@@ -38,6 +38,7 @@ dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:24.1.0'
+    compile 'com.github.NickAndroid:Logger_Android:1.0'
 }
 
 install {
