--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -72,6 +72,10 @@
         <activity
             android:name=".CustomAnimationTest"
             android:label="CustomAnimationTest" />
+
+        <activity
+            android:name=".DownloadMachine"
+            android:label="DownloadMachine" />
     </application>
 
 </manifest>
