--- a/gradle.properties
+++ b/gradle.properties
@@ -21,10 +21,10 @@ VERSION_NAME=0.4
 VERSION_CODE=40
 GROUP=dev.nick
 
-POM_NAME=Image loader lib for android
+POM_NAME=Image accessory lib for android
 POM_ARTIFACT_ID=imageloader
 POM_PACKAGING=jar
-POM_DESCRIPTION=Image loader lib for android
+POM_DESCRIPTION=Image accessory lib for android
 POM_URL=http://nickandroid.github.io/ImageLoader_Android/
 POM_SCM_URL=http://nickandroid.github.io/ImageLoader_Android/
 POM_SCM_CONNECTION=scm:git@github.com:NickAndroid/ImageLoader_Android.git
