--- a/core/build.gradle
+++ b/core/build.gradle
@@ -39,9 +39,9 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:24.1.0'
     compile 'com.android.support:recyclerview-v7:24.1.0'
+    compile 'com.github.NickAndroid:Logger_Android:2.0'
+    compile 'com.google.guava:guava:19.0'
     provided 'org.projectlombok:lombok:1.12.6'
-    compile files('libs/guava-19.0.jar')
-    compile project(':Logger_Android-2.0')
 }
 
 install {
